@@ -1,7 +1,15 @@
 import java.util.ArrayList;
 import java.util.List;
-import org.openjdk.jol.info.GraphLayout;
 
+/**
+ * 1. 编译javac -encoding UTF-8 Creating_too_many_objects_leads_to_OOM.java
+ * 2. 打包jar cvfe Creating_too_many_objects_leads_to_OOM.jar Creating_too_many_objects_leads_to_OOM Creating_too_many_objects_leads_to_OOM.class
+ * 3. 运行java -jar Creating_too_many_objects_leads_to_OOM.jar
+ *
+ * java -jar -Xms200m -Xmx200m -Xmn100m -XX:+PrintGC Creating_too_many_objects_leads_to_OOM.jar
+ *
+ * java -Xms80m -Xmx80m -XX:+PrintGC -Xloggc:gc.log -jar Creating_too_many_objects_leads_to_OOM.jar
+ * */
 public class Creating_too_many_objects_leads_to_OOM {
     public static void main(String[] args) {
         List<Object> list = new ArrayList<>();
@@ -15,7 +23,7 @@ public class Creating_too_many_objects_leads_to_OOM {
                 objectCount++;
 
                 // 使用 JOL 来测量对象的大小
-                objectSize += GraphLayout.parseInstance(obj).totalSize();
+                objectSize += getObjectSize(obj);
 //                System.out.println("对象大小: " + objectSize + " bytes");
             }
         } catch (OutOfMemoryError e) {
@@ -29,5 +37,13 @@ public class Creating_too_many_objects_leads_to_OOM {
             //GB
             System.out.println("创建的对象总大小：" + objectSize / 1024 / 1024 / 1024 + " GB");
         }
+    }
+
+    // 获取对象的大小
+    private static long getObjectSize(Object obj) {
+        // 这里可以使用合适的方法来计算对象的实际大小
+        // 可以考虑使用 JOL 或者其他内存分析工具
+        // 这里假设每个对象占用 16 字节
+        return 16;
     }
 }
